js262/test/built-ins/RegExp/property-escapes/grammar-extension-empty-negated.js


/*---
author: Mathias Bynens
description: >
  This tests violations of the grammar starting here:

  CharacterClassEscape[U]::
    [+U] p{ UnicodePropertyValueExpression }
    [+U] P{ UnicodePropertyValueExpression }
esid: prod-CharacterClassEscape
negative:
  phase: parse
  type: SyntaxError
features: [regexp-unicode-property-escapes]
---*/

$DONOTEVALUATE();

/[\p{}]/u;
